--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#33127F",
-        "titleBar.activeBackground": "#4719B2",
-        "titleBar.activeForeground": "#FAF9FE"
-    }
+  "C_Cpp.errorSquiggles": "disabled"
 }
